--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-
-    <title>The HTML5 Herald</title>
-    <meta name="description" content="The HTML5 Herald">
-    <meta name="author" content="SitePoint">
-    <style></style>
+    <title>P90 Studio LLC</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="P90 Studio LLC">
+    <meta name="author" content="Jongseung (John) Lim">
+    <style>
+        body {
+            background-color: rgb(249, 168, 0) !important;
+        }
+    </style>
 </head>
 <body>
-<h1>Hello</h1>
+<div class="container-fluid fill">
+    <div class="row d-flex justify-content-center h-100">
+        <div class="col-md-6 h-100 position-relative">
+            <div class="centered"><div class="logo" style="opacity: 0"><img src="images/p90logo1.jpg" class="img-responsive" alt="P90 Logo Image"></div></div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
