Open graph tags

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="P90 Studio LLC">
     <meta name="author" content="Jongseung (John) Lim">
+    <!-- Open Graph Start -->
+    <meta name="description" content="P90 Studio LLC"> <!-- ˜150 chars -->
+    <meta property="og:title" content="P90 Studio LLC">
+    <meta property="og:description" content="P90 Studio LLC"> <!-- ˜300 chars -->
+    <meta property="og:site_name" content="P90 Studio LLC">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://p90.studio">
+    <meta property="og:image" content="https://p90.studio/images/p90logo1.png"> <!-- 200x200px - 1200x1200px -->
+    <!-- Open Graph End -->
     <style>
         body {
             background-color: rgb(249, 168, 0) !important;
