--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="utf-8">
     <title>P90 Studio LLC</title>
